Cambios para actualizar la app a 2013
Cambios necesarios para actualizar la aplicación web con los datos del
periodo 2013

--- a/Web/html/proyectoVIBIDA.html
+++ b/Web/html/proyectoVIBIDA.html
@@ -87,7 +87,7 @@
 			</p></article>
 			
 			<article><p>
-				La herramienta, que se considera desarrollada a nivel de prototipo, permite la visualización de datos de las Administraciones locales españolas, a partir de ficheros en formato XBRL proporcionados por el Ministerio de Economía y Hacienda. Se pueden visualizar los datos disponibles hasta la fecha, que corresponden a 2010, 2011 y 2012, pero como se utiliza un formato estándar es posible incorporar nueva información de forma sencilla. El software es de uso libre y está licenciado bajo licencia Creative Commons reconocimiento v.3. Puede accederse al mismo y a la correspondiente documentación técnica en <a href="https://github.com/labje/vibida">https://github.com/labje/vibida</a>. Para ponerse en contacto con los desarrolladores del proyecto puede enviar un correo electrónico a jfm@unizar.es.
+				La herramienta, que se considera desarrollada a nivel de prototipo, permite la visualización de datos de las Administraciones locales españolas, a partir de ficheros en formato XBRL proporcionados por el Ministerio de Economía y Hacienda. Se pueden visualizar los datos disponibles hasta la fecha, que corresponden a 2010, 2011, 2012 y 2013, pero como se utiliza un formato estándar es posible incorporar nueva información de forma sencilla. El software es de uso libre y está licenciado bajo licencia Creative Commons reconocimiento v.3. Puede accederse al mismo y a la correspondiente documentación técnica en <a href="https://github.com/labje/vibida">https://github.com/labje/vibida</a>. Para ponerse en contacto con los desarrolladores del proyecto puede enviar un correo electrónico a jfm@unizar.es.
 			</p></article>
 
 			<article>
