--- a/Web/cabecera_customizada/index.html
+++ b/Web/cabecera_customizada/index.html
@@ -54,7 +54,8 @@
                 <select name="" id="periodo">
                   <option value="2010">2010</option>
                   <option value="2011">2011</option>
-                  <option value="2012" selected="selected">2012</option>
+                  <option value="2012">2012</option>
+                  <option value="2013" selected="selected">2013</option>
                 </select>
             </div>
           </nav>
